--- a/insurance/src/styles/AboutUs.scss
+++ b/insurance/src/styles/AboutUs.scss
@@ -1,12 +1,128 @@
 .about-us {
-  background-image: url('../images/AboutUs.png');
-  background-repeat: no-repeat;
-  background-size: contain;
   min-height: 37.5rem;
+  position: relative;
+
+  .background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 35%;
+    height: 100%;
+    z-index: -1;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 
   .section-container {
     max-width: 67.875rem;
     margin: 0 auto;
     display: flex;
+    gap: 4.75rem;
+    padding: 5.125rem 0;
+
+    .left-section {
+      width: 35%;
+
+      h1 {
+        font-weight: 700;
+        font-size: 2.25rem;
+        line-height: 2.6875rem;
+        color: #FFFFFF;
+        max-width: 11.4375rem;
+
+        span {
+          color: #F7941D;
+        }
+      }
+
+      .our-aim {
+        background: #F2FAF6;
+        box-shadow: 0px 1px 10px rgba(0, 130, 60, 0.15);
+        border-radius: 5px;
+        padding: 1rem 1.5rem;
+        max-width: 16.875rem;
+        position: relative;
+        box-sizing: border-box;
+        float: right;
+
+        .yellow-quote {
+          position: absolute;
+          width: 2rem;
+          height: 2rem;
+          border-radius: 50%;
+          background-color: #F7941D;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          top: -1rem;
+          left: -1rem;
+        }
+
+        .ceo {
+          font-weight: 500;
+          font-size: 1rem;
+          line-height: 1.1875rem;
+          display: flex;
+          align-items: center;
+          color: #5C5C5C;
+
+          span {
+            color: #F7941D;
+          }
+        }
+
+        p:not(.ceo) {
+          font-weight: 400;
+          font-size: 1.25rem;
+          line-height: 1.5rem;
+          display: flex;
+          align-items: center;
+          color: #181818;
+        }
+      }
+    }
+
+    .right-section {
+      h5 {
+        font-weight: 500;
+        font-size: 1.25rem;
+        line-height: 1.5rem;
+        color: #5C5C5C;
+      }
+
+      h1 {
+        font-weight: 700;
+        font-size: 2.25rem;
+        line-height: 2.6875rem;
+        color: #181818;
+
+        span {
+          color: #009444;
+        }
+      }
+
+      p {
+        font-weight: 400;
+        font-size: 1.25rem;
+        line-height: 1.5rem;
+        color: #181818;
+        max-width: 29.6875rem;
+      }
+
+      button {
+        padding: 1.15625rem 3rem;
+        font-weight: 600;
+        font-size: 1rem;
+        line-height: 1.1875rem;
+        color: #FFFFFF;
+        background: #009444;
+        border-radius: 5px;
+        border: none;
+      }
+    }
   }
 }
