--- a/insurance/src/styles/Customer.scss
+++ b/insurance/src/styles/Customer.scss
@@ -60,6 +60,37 @@
           line-height: 1.3125rem;
           color: #009444;
         }
+
+        .icon-item {
+          display: flex;
+          align-items: center;
+          margin-bottom: 0.6rem;
+
+          img {
+            margin-right: 0.75rem;
+          }
+
+          span {
+            font-weight: 400;
+            font-size: 1rem;
+            line-height: 1.1875rem;
+            color: #5C5C5C;
+          }
+        }
+
+        a {
+          text-decoration: none;
+        }
+
+        .social-links {
+          display: flex;
+          align-items: center;
+          margin-top: 2rem;
+
+          a img {
+            margin-right: 1.5rem;
+          }
+        }
       }
     }
   }
