update the layout

--- a/insurance/src/styles/index.scss
+++ b/insurance/src/styles/index.scss
@@ -1,3 +1,15 @@
 body {
     margin: 0;
 }
+
+@import "./AboutUs.scss";
+@import "./ContactForm.scss";
+@import "./CTA.scss";
+@import "./Customer.scss";
+@import "./Faq.scss";
+@import "./Hero1.scss";
+@import "./WhyCoverage.scss";
+@import "./SecondaryHero.scss";
+@import "./GetQuote.scss";
+@import "./SecondaryCTA.scss";
+@import "./Footer.scss";
