--- a/insurance/src/styles/Customer.scss
+++ b/insurance/src/styles/Customer.scss
@@ -38,6 +38,14 @@
       grid-gap: 1.5rem;
       margin: 3rem 0;
 
+      @media screen and (max-width: 900px) and (min-width: 601px) {
+        grid-template-columns: repeat(2, 1fr);   
+      }
+
+      @media screen and (max-width: 600px) {
+        grid-template-columns: repeat(1, 1fr);   
+      }
+
       .customer-item {
         border: 2px solid #F2FAF6;
         border-radius: 5px;
