--- a/insurance/src/styles/Faq.scss
+++ b/insurance/src/styles/Faq.scss
@@ -27,6 +27,66 @@
       }
     }
 
+    .search-input {
+      max-width: 38.375rem;
+      margin: 5rem auto 4rem;
+      display: flex;
+      justify-content: space-between;
+      filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.1));
+      border-radius: 5px;
+      box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+
+      .input-section {
+        width: calc(100% - 11rem);
+        padding: 1rem 1.5rem;
+        box-sizing: border-box;
+
+        &-content {
+          display: flex;
+          flex-direction: column;
+
+          label {
+            font-weight: 400;
+            font-size: 0.875rem;
+            line-height: 1.0625rem;            
+            color: #5C5C5C;
+            margin-bottom: 0.5rem;
+          }
+
+          input {
+            font-weight: 500;
+            font-size: 1.25rem;
+            line-height: 1.5rem;
+            border: none;
+            background-color: transparent;
+            color: #181818;
+            outline: none;
+
+            &::placeholder {
+              color: #D7D7D7;
+            }
+
+            &:focus {
+              outline: none;
+              box-shadow: none;
+            }
+          }
+        }
+      }
+
+      button {
+        background: #F7941D;
+        border: none;
+        padding: 1rem 1.5rem;
+        border-radius: 0 5px 5px 0;
+        color: white;
+        font-weight: 600;
+        font-size: 1rem;
+        line-height: 1.375rem;
+        width: 11rem;
+      }
+    }
+
     .section-content {
       max-width: 51.25rem;
       margin: 0 auto;
