--- a/insurance/src/styles/Footer.scss
+++ b/insurance/src/styles/Footer.scss
@@ -10,13 +10,26 @@
     margin: 0 auto;
     display: flex;
 
+    @media screen and (max-width: 900px) {
+      display: block;
+    }
+
     .footer-group-item {
 
       &.large {
         width: 25%;
 
+        @media screen and (max-width: 900px) {
+          width: 100%;
+          box-sizing: border-box;          
+        }
+
         &:last-child {
           padding-left: 3rem;
+
+          @media screen and (max-width: 900px) {
+            padding: 1rem; 
+          }
         }
       }
 
@@ -24,6 +37,13 @@
         width: 12%;
         margin: 0 2%;
         padding-top: 1.5rem;
+
+        @media screen and (max-width: 900px) {
+          width: 100%;
+          margin: 0;
+          padding: 1rem;
+          box-sizing: border-box;
+        }
       }
 
       .logo {
