--- a/insurance/src/styles/MeetTeam.scss
+++ b/insurance/src/styles/MeetTeam.scss
@@ -30,6 +30,18 @@
       &.team-page {
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 4.5rem 1.5rem;
+
+        @media (max-width: 900px) and (min-width: 601px) {
+          grid-template-columns: repeat(2, 1fr);
+          max-width: 45rem;
+          margin: 0 auto;
+        }
+
+        @media (max-width: 600px) {
+          grid-template-columns: repeat(1, 1fr);
+          max-width: 23rem;
+          margin: 0 auto;
+        }
       }
 
       .user-item {
