--- a/insurance/src/styles/Footer.scss
+++ b/insurance/src/styles/Footer.scss
@@ -1,6 +1,6 @@
 .footer {
   padding: 10.5rem 1rem 7.5625rem;
-  background-image: url('../images/footer/FooterBG.png');
+  background-image: url('http://tyndall.insure/wp-content/uploads/2022/08/FooterBG.png');
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: cover;
