--- a/insurance/src/styles/Hero1.scss
+++ b/insurance/src/styles/Hero1.scss
@@ -13,7 +13,7 @@
     width: 70%;
     height: 100%;
     z-index: -1;
-    background-image: url('../images/HeroBg1.png');
+    background-image: url('http://tyndall.insure/wp-content/uploads/2022/08/HeroBg1.png');
     background-repeat: no-repeat;
     padding: 1rem 0;        
     background-position: bottom;
@@ -52,7 +52,7 @@
         }        
 
         span {
-          background-image: url('../images/bottom-img.png');
+          background-image: url('http://tyndall.insure/wp-content/uploads/2022/08/bottom-img.png');
           background-repeat: no-repeat;
           padding: 1rem 0;        
           background-position: bottom;
