--- a/insurance/src/styles/index.scss
+++ b/insurance/src/styles/index.scss
@@ -13,3 +13,5 @@ body {
 @import "./GetQuote.scss";
 @import "./SecondaryCTA.scss";
 @import "./Footer.scss";
+@import "./InsurancePlan.scss";
+@import "./Story.scss";
