--- a/insurance/src/styles/InsurancePlan.scss
+++ b/insurance/src/styles/InsurancePlan.scss
@@ -1,5 +1,5 @@
 .insurance-plan {
-  padding: 7rem 0;
+  padding: 7rem 1rem;
 
   .section-container {
     max-width: 67.875rem;
@@ -30,6 +30,14 @@
       grid-gap: 1.5rem;
       margin: 3rem 0;
 
+      @media screen and (max-width: 900px) and (min-width: 601px) {
+        grid-template-columns: repeat(2, 1fr);   
+      }
+
+      @media screen and (max-width: 600px) {
+        grid-template-columns: repeat(1, 1fr);   
+      }
+
       .plan-item {
         border: 2px solid #F2FAF6;
         border-radius: 5px;
@@ -55,6 +63,10 @@
       align-items: center;
       justify-content: space-between;
 
+      @media screen and (max-width: 900px) {
+        flex-direction: column;
+      }
+
       p {
         color: #5C5C5C;
 
@@ -64,6 +76,12 @@
           line-height: 1.1875rem;
           color: #F7941D;
         }
+
+        @media screen and (max-width: 900px) {
+          margin-bottom: 1.5rem;
+          text-align: center;
+        }
+  
       }
 
       button {
