--- a/insurance/src/styles/WhyCoverage.scss
+++ b/insurance/src/styles/WhyCoverage.scss
@@ -8,8 +8,19 @@
     width: 100%;
     gap: 10%;
 
+    @media (max-width: 900px) {
+      display: block;
+      text-align: center;
+      max-width: 30rem;
+    }
+
     .left-section {
       width: 50%;
+
+      @media (max-width: 900px) {
+        width: 100%;
+        margin-bottom: 2rem;
+      }
       
       h4 {
         font-weight: 500;
@@ -44,6 +55,13 @@
     .right-section {
       width: 40%;
 
+      @media (max-width: 900px) {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
       ul {
         padding: 0;
         list-style: none;        
@@ -73,6 +91,10 @@
   min-height: 34.375rem;
   position: relative;
 
+  @media (max-width: 900px) {
+    padding: 2rem 1rem;
+  }
+
   .green-bg {
     position: absolute;
     height: 100%;
@@ -82,6 +104,10 @@
     background-position: bottom right;
     background-repeat: no-repeat;
     z-index: -1;
+
+    @media (max-width: 900px) {
+      display: none;
+    }
 
     .green-bg-content {
       position: relative;
@@ -102,9 +128,18 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    
+    @media (max-width: 900px) {
+      display: block;
+    }
 
     .left-section {
       width: 40%;
+
+      @media (max-width: 900px) {
+        width: 100%;
+        padding: 0 1rem;
+      }
 
       .our-aim {
         background: #F2FAF6;
@@ -116,6 +151,11 @@
         box-sizing: border-box;
         float: right;
         margin-top: 15rem;
+
+        @media (max-width: 900px) {
+          margin-top: 0;
+          float: none;
+        }
 
         .yellow-quote {
           position: absolute;
@@ -157,6 +197,10 @@
     .right-section {
       width: 50%;
       padding-top: 5.8125rem;
+
+      @media (max-width: 900px) {
+        width: 100%;
+      }
 
       h4 {
         font-weight: 500;
