--- a/insurance/src/styles/GetQuote.scss
+++ b/insurance/src/styles/GetQuote.scss
@@ -135,7 +135,8 @@
               font-weight: 500;
               font-size: 0.625rem;
               line-height: 0.75rem;
-              color: #5C5C5C;              
+              color: #5C5C5C;
+              text-align: left;         
             }
 
             input, select {
